apps/multimedia/manifests/overseer/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: overseer
    app.kubernetes.io/part-of: overseer
    app.kubernetes.io/version: 1.29.1
  name: overseer
  namespace: multimedia
spec:
  ports:
  - name: http
    port: 5055
    targetPort: http
  selector:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: overseer
    app.kubernetes.io/part-of: overseer
