apps/multimedia/manifests/overseer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: overseer
    app.kubernetes.io/part-of: overseer
    app.kubernetes.io/version: 1.29.1
    probe: enabled
  name: overseer
  namespace: multimedia
spec:
  rules:
  - host: seek.ankhmorpork.thaum.xyz
    http:
      paths:
      - backend:
          service:
            name: overseer
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - seek.ankhmorpork.thaum.xyz
    secretName: overseer-tls
